# nako-blog

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  conf.ini
.github/workflows/: release.yml
assert/config/: conf.ini
assert/static/admin/config/: pear.config.json  pear.config.yml
assert/templates/: error.html  error_resp.html  resp_error.html
assert/templates/admin/art/: create.html  detail.html  index.html  update.html
assert/templates/admin/attach/: detail.html  index.html
assert/templates/admin/auth/: login.html
assert/templates/admin/cate/: create.html  detail.html  index.html  update.html
assert/templates/admin/comment/: detail.html  index.html
assert/templates/admin/error/: index.html
assert/templates/admin/friendlink/: create.html  detail.html  index.html  update.html
assert/templates/admin/guestbook/: detail.html  index.html
assert/templates/admin/index/: _menus.html  console.html  index.html
assert/templates/admin/page/: create.html  detail.html  index.html  update.html
assert/templates/admin/profile/: update_avatar.html  update_info.html  update_password.html
assert/templates/admin/setting/: index.html
assert/templates/admin/tag/: create.html  detail.html  index.html  update.html
assert/templates/admin/user/: create.html  detail.html  index.html  update.html  update_password.html
assert/templates/blog/: data.html
docs/: admin-html.rar  blog-html.rar  nako.sql  nako_blog.sql
src/: lib.rs  main.rs
src/app/: mod.rs
src/app/data/: menu.rs
src/app/entity/: art.rs  attach.rs  cate.rs  comment.rs  friendlink.rs  guestbook.rs  mod.rs  page.rs  setting.rs  table.rs  tag.rs  user.rs
src/app/middleware/: admin_auth.rs  blog_open.rs  blog_settings.rs  mod.rs
src/app/model/: art.rs  attach.rs  cate.rs  comment.rs  friendlink.rs  guestbook.rs  mod.rs  page.rs  setting.rs  tag.rs  user.rs
src/app/service/: http.rs  mod.rs  setting.rs
src/boot/: app.rs  error.rs  mod.rs
src/nako/: app.rs  auth.rs  config.rs  db.rs  embed.rs  env.rs  file.rs  global.rs  http.rs  log.rs  mod.rs  page.rs  random.rs  redis.rs  rsa.rs  time.rs  utils.rs  view.rs
src/route/: admin.rs  blog.rs  mod.rs
(+46 files in other folders)
