[package]
name = "nako-blog"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
actix-files = "0.6"
actix-multipart = "0.6.0"
actix-session = { version = "0.7.2", features = ["cookie-session"] }

listenfd = "1.0.1"
humantime = "2.1.0"
dotenvy = "0.15"
log = "0.4.17"
serde = "1.0.160"
serde_json = "1.0.96"
tera = "1.18.1"
rand = "0.8.5"
fern = "0.6.2"
futures-util = "0.3.28"
captcha = "0.0.9"
bcrypt = "0.14"
rust-crypto = "0.2.36"
humansize = "2.1.3"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
uuid = { version = "1", features = ["v4"] }
sea-orm = { version = "0.11.2", features = ["sqlx-mysql", "runtime-actix-rustls", "macros"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
