[package]
name = "nako-blog"
version = "1.0.0"
edition = "2021"
authors = ["Deatil <deatil@github.com>"]
license = "Apache2"

[dependencies]
actix-web = "4.3.1"
actix-web-lab = "0.19.1"
actix-files = "0.6"
actix-multipart = "0.6.0"
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }

listenfd = "1.0.1"
humantime = "2.1.0"
dotenvy = "0.15"
log = "0.4.17"
url = "2.3.1"
serde = "1.0.160"
serde_json = "1.0.96"
tera = "1.18.1"
rand = "0.8.5"
fern = "0.6.2"
rsa = { version = "0.9.2", features = ["pem"] }
futures-util = "0.3.28"
captcha = "0.0.9"
bcrypt = "0.14"
rust-crypto = "0.2.36"
humansize = "2.1.3"
rust-ini = "0.19.0"
once_cell = "1.17.2"
validator = { version = "0.16", features = ["derive"] }
chrono = { version = "0.4", features = ["unstable-locales"] }
chrono-tz = { version = "0.8.2", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
sea-orm = { version = "0.11.2", features = ["sqlx-mysql", "runtime-actix-rustls", "macros"] }
sea-query = "0.28.5"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter"] }
redis = { version = "0.23", features = [
    "tokio-comp",
    "connection-manager",
    "tokio-native-tls-comp",
] }
